# a2a-chat

./: .gitignore  AGENTS.md  README.md  VISION.md  executor.jsonc  package.json  registry.json  tsconfig.json
.github/workflows/: publish-api.yml  publish-react.yml  publish-ui.yml
apps/demo/: README.md  hserver.ts  package.json  server.ts
apps/demo/src/: server.ts
apps/demo/src/api/: api.ts
apps/demo/src/api/handlers/: utils.ts
apps/demo/src/api/utils/: api.ts
apps/playground/: index.html  package.json  tsconfig.json  vite.config.ts
apps/playground/src/: App.tsx  styles.css
apps/server/: .gitignore  build-web.ts  hserver.ts  package.json
apps/server/public/: index.html
apps/server/public/assets/: app.js  styles.css
apps/server/src/: server.ts
apps/server/test-agent/: fast.py
apps/server/web/: app.css  main.tsx
docs/: a2a-rendering.md  a2a.md
exp/: agent.py  client.py  fast.py  pyproject.toml
